fixed header alignment, fixed search results for desktop

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   color: #000;
   letter-spacing: 0.4px;
   font-size: 2.4rem;
+  padding-left: 20px;
 }
 
 .header {
@@ -28,7 +29,6 @@
 
 .logo-container {
   margin-left: auto;
-  padding-left: 20px;
   margin-right: auto;
 }
 
@@ -378,6 +378,7 @@
     color: #000;
     letter-spacing: 0.4px;
     font-size: 3.4rem;
+    padding-left: 190px;
   }
 
   .header {
@@ -385,12 +386,10 @@
     padding: 12px 60px;
     justify-content: space-evenly;
     align-items: center;
-    gap: 170px;
   }
 
   .logo-container {
     margin-left: 0;
-    padding-left: 20px;
     margin-right: 0;
   }
 
